[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/player_stats_display.gd" id="1"]

[node name="PlayerStatsDisplay" type="Control"]
custom_minimum_size = Vector2(200, 80)
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 10

[node name="HealthContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer/HealthContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="VBoxContainer/HealthContainer"]
layout_mode = 2
text = "100/100"
horizontal_alignment = 1

[node name="ManaContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="ManaBar" type="ProgressBar" parent="VBoxContainer/ManaContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="ManaLabel" type="Label" parent="VBoxContainer/ManaContainer"]
layout_mode = 2
text = "100/100"
add_theme_color_override("font_color", Color(0.5, 0.7, 1, 1))
horizontal_alignment = 1

